// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOrderUpdate, current sequence too small 1`] = `Object {}`;

exports[`handleOrderUpdate, method wrong, not loadingPairs 1`] = `Object {}`;

exports[`handleOrderUpdate, order processed already 1`] = `
Object {
  "orderHash1": 200,
}
`;

exports[`handleOrderUpdate, pair wrong 1`] = `Object {}`;

exports[`handleOrderUpdate, terminate a non existing liveOrder 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , add 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , add 2`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 10,
    "balance": 5,
    "currentSequence": 5,
    "fill": 1,
    "initialSequence": 1,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 100,
    "side": "bid",
  },
}
`;

exports[`handleOrderUpdate, update orderBooks , add 3`] = `
Array [
  Array [
    "pair",
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 123456789,
    },
    Object {
      "amount": 10,
      "count": -1,
      "pair": "pair",
      "prevVersion": 0,
      "price": 100,
      "side": "bid",
      "version": 123456789,
    },
  ],
]
`;

exports[`handleOrderUpdate, update orderBooks , add 4`] = `
Object {
  "asks": Array [],
  "bids": Array [
    Object {
      "amount": 10,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 100,
    },
  ],
}
`;

exports[`handleOrderUpdate, update orderBooks , add 5`] = `
Object {
  "asks": Array [],
  "bids": Array [],
  "pair": "pair",
  "version": 123456789,
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 2`] = `Object {}`;

exports[`handleOrderUpdate, update orderBooks , terminate 3`] = `
Array [
  Array [
    "pair",
    Object {
      "asks": Array [],
      "bids": Array [
        Object {
          "amount": -10,
          "count": 1,
          "price": 100,
        },
      ],
      "pair": "pair",
      "version": 123456789,
    },
    Object {
      "amount": -10,
      "count": 1,
      "pair": "pair",
      "prevVersion": 123456789,
      "price": 100,
      "side": "bid",
      "version": 123456789,
    },
  ],
]
`;

exports[`handleOrderUpdate, update orderBooks , terminate 4`] = `
Object {
  "asks": Array [],
  "bids": Array [],
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 5`] = `
Object {
  "asks": Array [],
  "bids": Array [
    Object {
      "amount": -10,
      "count": 1,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 123456789,
}
`;
